Created featured products slider and edits the shopping cart context

--- a/src/components/hero/slider.css
+++ b/src/components/hero/slider.css
@@ -23,7 +23,7 @@
   object-fit: cover;
 }
 @media all and (max-width: 600px) {
-  .swiper-slide img {
+  .heroSwiper .swiper-slide img {
     display: none;
   }
 }
