--- a/src/components/hero/slider.css
+++ b/src/components/hero/slider.css
@@ -12,10 +12,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: content-box;
 }
 .swiper-slide:active {
   cursor: grabbing;
-}
+} /*
+.swiper-slide:hover {
+  border: 1px solid #000;
+}*/
 .swiper-slide img {
   display: block;
   width: 100%;
